[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scripts/Dice.gd" type="Script" id=1]
[ext_resource path="res://Sprites/dice_rool_sheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/dice_roll_sweep_sheet.png" type="Texture" id=3]
[ext_resource path="res://Sprites/dice_dot1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/dice_outline_sheet.png" type="Texture" id=5]
[ext_resource path="res://Sounds/dice_sound.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sounds/dice_roll_sound.ogg" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 41 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": false,
"name": "roll",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ SubResource( 48 ) ],
"loop": true,
"name": "disabled",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "active",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 40 ) ],
"loop": false,
"name": "sweep",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 24, 30 )

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 32, 28 )

[sub_resource type="CircleShape2D" id=65]
radius = 8.0

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 24, 4 )

[sub_resource type="Animation" id=64]
resource_name = "lift_down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Vector2( 32, 32 ), Vector2( 32, 40 ) ]
}

[node name="Dice" type="StaticBody2D" groups=["Dice"]]
script = ExtResource( 1 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Dice" type="AnimatedSprite" parent="Sprites"]
position = Vector2( 32, 32 )
frames = SubResource( 30 )
animation = "idle"

[node name="DiceDots" type="Sprite" parent="Sprites"]
position = Vector2( -16, -16 )
texture = ExtResource( 4 )
centered = false

[node name="DiceOutline" type="AnimatedSprite" parent="Sprites"]
position = Vector2( 32, 32 )
frames = SubResource( 47 )
animation = "disabled"

[node name="RollSweep" type="AnimatedSprite" parent="Sprites"]
position = Vector2( 32, 32 )
z_index = 100
frames = SubResource( 39 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 30 )
shape = SubResource( 24 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( 32, 36 )
shape = SubResource( 66 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 56, 8 )
shape = SubResource( 65 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 65 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32, 4 )
shape = SubResource( 43 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/lift_down = SubResource( 64 )

[node name="DiceRollSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 4.369
pitch_scale = 0.56
mix_target = 1
bus = "Effects"

[node name="DiceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 4.369
pitch_scale = 1.06
bus = "Effects"

[connection signal="animation_finished" from="Sprites/RollSweep" to="." method="_on_RollSweep_animation_finished"]
[connection signal="frame_changed" from="Sprites/RollSweep" to="." method="_on_RollSweep_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="finished" from="DiceRollSound" to="." method="_on_DiceSound_finished"]
[connection signal="finished" from="DiceSound" to="." method="_on_DiceSound_finished"]
